--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <title>Bikcraft</title>
 </head>
 <body>
@@ -31,7 +33,9 @@
       <p>Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
       <a href="./bicicletas.html">Selecione a sua</a>
     </div>
-      <img src="./img/fotos/introducao.jpg" alt="Bicicletas Eletrica Preta">
+      <div>
+        <img src="./img/fotos/introducao.jpg" alt="Bicicletas Eletrica Preta">
+      </div>
   </div>
  </main>
   
