--- a/index.html
+++ b/index.html
@@ -1,69 +1,207 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="css/style.css
+  ">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+    rel="stylesheet">
+   "" 
+  <script> document.documentElement.classList.add('js');</script>
   <title>Bikcraft</title>
-</head>
+  </head>
+  
+
 <body>
 
+
+
   <header class="header-bg">
-  <div class="header">
-    <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft">
-    </a>
-    <nav aria-label="primaria" >
-      <ul class="header-menu font-1-m">
-        <li><a href="./bicicletas.html">Bicicletas</a></li>
-        <li><a href="./seguros.html">Seguros</a></li>
-        <li><a href="./contato.html">Contato</a></li>
-      </ul>
-    </nav>
-   </div>
+    <div class="header container">
+      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft">
+      </a>
+      <nav aria-label="primaria">
+        <ul class="header-menu font-1-m">
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
- <main class="introducao-bg">
-  <div class="introducao">
-    <div class="introducao-conteudo">
-      <h1 class="font-1-xxl">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-      <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-      <a href="./bicicletas.html">Selecione a sua</a>
-    </div>
-      <div>
+  <main class="introducao-bg">
+    <div class="introducao container">
+      <div class="introducao-conteudo">
+        <h1 class="font-1-xxl cor-01 fadeInDown" data-anime="400">Bicicletas feitas sob medida<span
+            class="cor-p1">.</span></h1>
+        <p class="font-2-l fadeInDown " data-anime="600"
+          data-clipboard-text="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore  o mundo na sua velocidade com a Bikcraft.">
+          Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore
+          o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="btn fadeInDown" data-anime="800" href="./bicicletas.html">Selecione a sua</a>
+      </div>
+      <div class="fadeInDown" data-anime="1000">
         <img src="./img/fotos/introducao.jpg" alt="Bicicletas Eletrica Preta">
       </div>
-  </div>
- </main>
+    </div>
+  </main>
 
- <article class="bicicletas-lista">
-   <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span> </h2>
+  <article class="bicicletas-lista">
+    <h2 class="font-1-xxl container">escolha a sua<span class="cor-p1">.</span> </h2>
 
-   <ul>
-    <a href="./bicicletas/magic.html">
-      <li><img src="./img/bicicletas/magic-home.jpg" alt="Bicicletas preta"></li>
-      <h3 class="font-1-xl">Magic Might</h3>
-      <span class="font-2-m cor-08">R$ 2499</span>
-    </a>
+    <ul>
+      <a href="./bicicletas/magic.html">
+        <li><img src="./img/bicicletas/magic-home.jpg" alt="Bicicletas preta"></li>
+        <h3 class="font-1-xl">Magic Might</h3>
+        <span class="font-2-m cor-08">R$ 2499</span>
+      </a>
 
-    <a href="./bicicletas/nimbus.html">
-      <li><img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicletas preta"></li>
-      <h3 class="font-1-xl">Nimbus Stark</h3>
-      <span class="font-2-m cor-08">R$ 3999</span>
-    </a>
+      <a href="./bicicletas/nimbus.html">
+        <li><img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicletas preta"></li>
+        <h3 class="font-1-xl">Nimbus Stark</h3>
+        <span class="font-2-m cor-08">R$ 3999</span>
+      </a>
 
-    <a href="./bicicletas/nebula.html">
-      <li><img src="./img/bicicletas/nebula-home.jpg" alt="Bicicletas preta"></li>
-      <h3 class="font-1-xl">Nebula Cosmic</h3>
-      <span class="font-2-m cor-08">R$ 4999</span>
-    </a>
-    
-   </ul>
- </article>
+      <a href="./bicicletas/nebula.html">
+        <li><img src="./img/bicicletas/nebula-home.jpg" alt="Bicicletas preta"></li>
+        <h3 class="font-1-xl">Nebula Cosmic</h3>
+        <span class="font-2-m cor-08">R$ 4999</span>
+      </a>
+    </ul>
+  </article>
 
-  
+  <article class="tecnologia-bg ">
+    <div class="tecnologia container">
+      <div class="tecnologia-conteudo">
+        <span class="font-2-l-b cor-05">Tecnologia Avançada</span>
+        <h2 class="font-1-xxl cor-01">Voce escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
+        <p class="font-2-l cor-05">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu
+          corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar
+          completamente as suas cores.</p>
+        <a class="link" href="./bicicletas.html">ESCOLHA UM MODELO</a>
+        <div class="tecnologia-vantagens">
+          <div>
+            <img src="./img/icones/eletrica.svg" alt="">
+            <h3 class="font-1-m cor-01">Motor Elétrico</h3>
+            <p class="font-2-s cor-05">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A
+              bateria é recarregada com a sua energia gasta ao pedalar </p>
+          </div>
+          <div>
+            <img src="./img/icones/rastreador.svg" alt="">
+            <h3 class="font-1-m cor-01">Rastreador</h3>
+            <p class="font-2-s cor-05"> Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e
+              sistemas anti-furto para garantir o seu sossego </p>
+          </div>
+        </div>
+      </div>
+      <div class="tecnologia-imagem">
+        <img src="./img/fotos/tecnologia.jpg" alt="tecnologia">
+      </div>
+    </div>
+  </article>
+
+  <section class="parceiros" aria-label="Nossos Parceiros">
+    <h2 class="font-1-xxl cor-00">nosso parceiros<span class="cor-p1">.</span></h2>
+
+
+    <ul>
+      <li><img src="./img/parceiros/caravan.svg " alt="caravan" width="140" height="38"></li>
+      <li><img src="./img/parceiros/ranek.svg" alt="ranek" width="149" height="36"></li>
+      <li><img src="./img/parceiros/handel.svg" alt="" width="139" height="50"></li>
+      <li><img src="./img/parceiros/dogs.svg" alt=""></li>
+      <li><img src="./img/parceiros/lescone.svg" alt=""></li>
+      <li><img src="./img/parceiros/flexblog.svg" alt=""></li>
+      <li><img src="./img/parceiros/wildbeast.svg" alt=""></li>
+      <li><img src="./img/parceiros/surfbot.svg" alt=""></li>
+    </ul>
+  </section>
+  <section class="depoimento" aria-label="Depoimento">
+    <div>
+      <img src="./img/fotos/depoimento.jpg" alt="Pessoa Pedalndo">
+    </div>
+
+    <div class="depoimento-conteudo">
+      <blockquote class="font-1-xl cor-p5">
+        <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificaro meu amor por esta
+          atividade. Recomendo á todos que amo.
+        </p>
+      </blockquote>
+      <span class="font-1-m-b cor-p4 ">Ana Júlia</span>
+    </div>
+  </section>
+  <article class="seguros-bg">
+    <div class="seguros container">
+      <h2 class="font-1-xxl cor-01">seguros<span class="cor-p1">.</span></h2>
+      <div class="seguros-item">
+        <h3 class="font-1-x1 cor-06">PRATA</h3>
+        <span class="font-1-xl cor-01">R$ 199 <span class="font-1-xs cor-06">mensal</span></span>
+        <ul class="font-2-m cor-01">
+          <li>Duas trocas por ano </li>
+          <li>Assistência têcnica</li>
+          <li>Suporte 08h ás 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a class="btn secundario" href="./orcamento.html">Inscreva-se</a>
+      </div>
+      <div class="seguros-item">
+        <h3 class="font-1-x1 cor-p1">OURO</h3>
+        <span class="font-1-xl cor-01">R$ 299 <span class="font-1-xs cor-06">mensal</span></span>
+        <ul class="font-2-m cor-01">
+          <li>Cinco trocas por ano </li>
+          <li>Assistência têcnica</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura Nacional</li>
+          <li>Desconto em parceiros</li>
+          <li>Acesso ao Clube Bikcraft</li>
+        </ul>
+        <a class="btn" href="./orcamento.html">Inscreva-se</a>
+      </div>
+    </div>
+  </article>
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <div class="footer-contato">
+        <h3 class="font-2-1-b cor-01">CONTATO</h3>
+        <ul class="font-2-m cor-05">
+          <li><a href="tel: +55 12 99999-9999">+55 12 99999-9999</a></li>
+          <li><a href="mailto">outlook@hotmail.com</a></li>
+          <li class="endreco">Rua Logo Ali, 42 - Vasco</li>
+          <li class="sp">São Paulo - SP</li>
+        </ul>
+        <div class="footer-redes">
+          <a href=""><img src="./img/redes/instagram.svg" alt="Instagram"></a>
+          <a href=""><img src="./img/redes/facebook.svg" alt="Facebook"></a>
+          <a href=""><img src="./img/redes/youtube.svg" alt="Youtube"></a>
+        </div>
+      </div>
+      <div class="footer-informacoes">
+        <h3 class="font-2-1-b cor-02">INFORMAÇOES</h3>
+        <nav>
+          <ul class="font-1-m cor-05">
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e Condiçoes</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer-copy">
+        <p class="font-2-m cor-07">Bikcraft © Alguns Direitos Reservados.</p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="./js/plugins/simple-anime.js"></script>
+  <script src="./js/plugins/clipboard.min.js"></script>
+  <script src="./js/script.js"></script>
 </body>
+
 </html>
